@startuml

Title Diagrama: Escuela y Asignaciones

class Escuela{
	 -int CANTIDAD_ASIGNACIONES_DEFAULT
	 -String nombreEscuela
	 -Asignacion[] asignaciones
	 	 
	 +agregarAsignacion()
	 +mostrarAsignaciones()
}


class Asignacion{
	 -Materia materia
	 -Alumno alumno
	 -Notas[] notas

	 +asignarNota()
	 +calcularPromedio()
	 +estadoMateria()
	 +mostrarNotas()
}

class Notas{
	-Double valorNota
	-String tipoNota
	
	+mostrarValorNota
	+mostrarNotas
}


class Alumno{
	-String nombre
	-int edad
	
	+mostrarAlumno()
}


class Materia{
	-String nombreMateria
	-String cuantrimestre
	
	+mostrarMateria()
}


Escuela -- Asignacion
Asignacion -left- Materia
Asignacion -- Alumno
Materia -left- Notas




@enduml